--- a/Newton divide and difference formula.ipynb
+++ b/Newton divide and difference formula.ipynb
@@ -25,7 +25,8 @@
      "text": [
       "[[1, 27, 125, 343, 729], [13.0, 49.0, 109.0, 193.0], [9.0, 15.0, 21.0], [1.0, 1.0], [0.0]]\n",
       ":::::::::::::::::formula part::::::::::::::\n",
-      " f(2) = 8.0\n"
+      " f(2) = 8.0\n",
+      "[1, -1, 3, -15]\n"
      ]
     }
    ],
@@ -58,9 +59,10 @@
     "l = fa(value,x)\n",
     "umair = 0\n",
     "for i in range(0,m-1):\n",
-    "    umair = umair +  ((l[i]*b[i+1][0]))\n",
+    "    umair = umair+  ((l[i]*b[i+1][0]))\n",
     "umair = umair + b[0][0]\n",
-    "print(f' f({value}) = {umair}')\n"
+    "print(f' f({value}) = {umair}')\n",
+    "print(l)\n"
    ]
   },
   {
